--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,15 @@
 .feedSize
-{width: 100px;
-height: 100px}
+{width: 60px;
+height: 60px;
+border-radius: 100%;}
+
+
+.post-container {
+  background-color: white;
+  border-radius: 1em;
+  padding: 20px;
+  display: grid;
+  gap: 10px;
+  justify-content: center;
+
+}
