--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,3 +21,20 @@ height: 78px;
 
 
 }
+
+
+
+.user-feed-container {
+  text-align: center;
+  width: 110%;
+  /* display: flex;
+  flex-direction: column;  */
+  gap: 20px;
+  margin-top: 65px;
+  justify-content: center;
+}
+
+.user-feed-image{
+height: 10%;
+width: 10%;
+}
