--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@ border-radius: 100%;}
 .post-container {
   background-color: white;
   border-radius: 1em;
-  padding: 20px;
+  padding: 25px;
   display: grid;
   gap: 10px;
   justify-content: center;
@@ -26,7 +26,7 @@ height: 78px;
 
 .user-feed-container {
   text-align: center;
-  width: 110%;
+  width: 100%;
   /* display: flex;
   flex-direction: column;  */
   gap: 20px;
@@ -35,6 +35,8 @@ height: 78px;
 }
 
 .user-feed-image{
-height: 10%;
-width: 10%;
+height: 80px;
+width: 80px;
+border-radius: 100%;
 }
+
