--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,10 +36,14 @@ button {
 }
 
 .header{
-  margin-left: -43%;
+  margin-left: -42%;
  
  }
 
+ .header2{
+  margin-left: -17%;
+ 
+ }
 
 .below-nav{
   margin-top: 6%;
@@ -95,7 +99,7 @@ border-radius: 100%;}
 
 
 .post-size{
-min-width:  50%;
+min-width:  40%;
 height: 78px;
 
 
