close to finished styling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -109,6 +109,15 @@ height: 78px;
 
 
 
+
+.post-size2{
+  margin-left:12%;
+ 
+  
+  
+  }
+
+
 .user-feed-container {
   text-align: center;
   width: 100%;
