--- a/client/src/index.css
+++ b/client/src/index.css
@@ -104,12 +104,21 @@ button {
   margin-top: 1.5%;
 }
 
+.search{
+margin-left: -18%;
+
+}
+.book-size{
+  height: 160px;
+  width: 120px;
+  margin-left: 18%;
+}
 
 .feedSize {
   width: 90px;
   height: 90px;
   border-radius: 100%;
-  margin-right: 12%;
+  margin-right: 13.5%;
 }
 
 .submit-forms {
@@ -187,4 +196,10 @@ button {
   width: 550px;
   margin-left: 30%;
   border-radius: 100%;
+}
+
+.delete-post{
+margin-left: 47%;
+
+
 }
