--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 input {
   border-radius: 5px;
 }
+
 button {
   cursor: pointer;
   border-radius: 13px;
@@ -14,7 +15,9 @@ button {
 
 * {
   font-family: cursive;
+  font-size: medium;
 }
+
 .on {
   color: #000;
   background-color: Transparent;
@@ -52,6 +55,13 @@ button {
 
 .signup {
   margin-top: 230%;
+}
+
+.comment-delete
+{
+  margin-top: 1%;
+  margin-left: -3%;
+
 }
 
 .login {
@@ -101,9 +111,10 @@ button {
 .search {
   margin-left: -18%;
 }
+
 .book-size {
-  height: 160px;
-  width: 120px;
+  height: 170px;
+  width: 130px;
   margin-left: 18%;
 }
 
@@ -150,6 +161,13 @@ button {
   gap: 13px;
 }
 
+.author-container {
+  margin-left: 27%;
+  margin-top: -9%;
+}
+
+
+
 .post-size {
   min-width: 40%;
   height: 78px;
@@ -164,6 +182,7 @@ button {
 .post-size2 {
   margin-left: 12%;
 }
+
 .post-size3 {
   margin-left: 36%;
 }
@@ -220,8 +239,8 @@ button {
   margin-left: 10%;
 }
 
-.comment-format{
-margin-top: 12%;
+.comment-format {
+  margin-top: 12%;
 
 
 }
