--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,7 +15,7 @@ button {
 
 * {
   font-family: cursive;
-  font-size: medium;
+  font-size: large;
 }
 
 .on {
@@ -55,6 +55,7 @@ button {
 
 .signup {
   margin-top: 230%;
+  margin-left: -80%;
 }
 
 .comment-delete
@@ -89,6 +90,14 @@ button {
   margin-right: 50%;
   width: 100%;
   height: 80%;
+}
+
+.below-nav3 {
+  margin-top: 1%;
+  justify-content: center;
+  display: grid;
+  align-content: center;
+  font-size: 36px;
 }
 
 .writepost {
@@ -214,7 +223,7 @@ button {
 .size {
   height: 550px;
   width: 550px;
-  margin-left: 30%;
+  margin-left: 28.5%;
   border-radius: 100%;
 }
 
