--- a/client/src/index.css
+++ b/client/src/index.css
@@ -77,7 +77,8 @@ button {
 }
 
 .header {
-  margin-left: -47%;
+  margin-left: -49%;
+  font-size: 22px;
 }
 
 .header2 {
@@ -95,6 +96,7 @@ button {
   justify-content: center;
   display: grid;
   align-content: center;
+  font-size: 32px;
 }
 
 .below-nav2 {
@@ -193,6 +195,19 @@ button {
 .post-size {
   min-width: 40%;
   height: 78px;
+  margin-left: -7%;
+
+}
+
+.post-size5 {
+ 
+  margin-left: 2%;
+
+}
+.post-size6 {
+ 
+  margin-left: -12.5%;
+
 }
 
 .inline {
